--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -116,7 +116,7 @@
 				phy-mode = "rmii";
 				#address-cells = <1>;
 				#size-cells = <0>;
-				status = "disabled";
+				status = "okay";
 
 				fixed-link {
 					speed = <100>;
@@ -153,119 +153,27 @@
 				};
 			};
 
-			spi0: spi@f0004000 {
-				cs-gpios = <&pioD 13 0>, <0>, <0>, <&pioD 16 0>;
-				id = <0>;
+			spi1: spi@f8008000 {
+				cs-gpios = <&pioC 25 0>;
+				id = <1>;
 				status = "okay";
 			};
 
-
-			spi1: spi@f8008000 {
-				cs-gpios = <0>, <0>, <0>, <&pioC 28 0>;
-				id = <1>;
+			spi0: spi@f0004000 {
+				cs-gpios = <&pioD 13 0>, <0>, <0>, <0>;
+				id = <0>;
 				status = "okay";
-				
-				lan9370: lan9370@3 {
-					compatible = "microchip,lan9370";
-					reg = <3>;
-					spi-max-frequency = <44000000>;
+
+				lan9374: lan9374@0 {
+					compatible = "microchip,lan9374";
+					reg = <0>;
+					/*44 MHz did not work*/
+					spi-max-frequency = <6000000>;
 					spi-cpha;
 					spi-cpol;
 					interrupt-parent = <&pioB>;
 					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
 					status = "okay";
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							phy-mode = "rmii";
-							label = "cpu";
-							ethernet = <&macb1>;
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-
-				lan9371: lan9371@3 {
-					compatible = "microchip,lan9371";
-					reg = <3>;
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "disabled";
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							phy-mode = "rmii";
-							label = "cpu";
-							ethernet = <&macb1>;
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@5 {
-							reg = <5>;
-							phy-mode = "rmii";
-							label = "lan5";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-				
-				lan9372: lan9372@3 {
-					compatible = "microchip,lan9372";
-					reg = <3>;
-					phy-mode = "rmii";
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "disabled";
 					ports {
 						#address-cells = <1>;
 						#size-cells = <0>;
@@ -295,9 +203,9 @@
 						};
 						port@6 {
 							reg = <4>;
+							phy-mode = "rmii";
 							label = "cpu";
-							phy-mode = "rmii";							
-							ethernet = <&macb1>;
+							ethernet = <&macb0>;
 							fixed-link {
 								speed = <100>;
 								full-duplex;
@@ -305,8 +213,8 @@
 						};
 						port@7 {
 							reg = <5>;
-							label = "lan7";
 							phy-mode = "rmii";
+							label = "lan7";
 							fixed-link {
 								speed = <100>;
 								full-duplex;
@@ -315,10 +223,11 @@
 					};
 				};
 				
-				lan9373: lan9373@3 {
+				lan9373: lan9373@0 {
 					compatible = "microchip,lan9373";
-					reg = <3>;
-					spi-max-frequency = <44000000>;
+					reg = <0>;
+					/*44 MHz did not work*/
+					spi-max-frequency = <6000000>;
 					spi-cpha;
 					spi-cpol;
 					interrupt-parent = <&pioB>;
@@ -360,7 +269,7 @@
 							reg = <4>;
 							phy-mode = "rmii";
 							label = "cpu";
-							ethernet = <&macb1>;
+							ethernet = <&macb0>;
 							fixed-link {
 								speed = <100>;
 								full-duplex;
@@ -377,65 +286,6 @@
 						};
 					};
 				};
-				
-				lan9374: lan9374@3 {
-					compatible = "microchip,lan9374";
-					reg = <3>;
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "disabled";
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <7>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <2>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <6>;
-							label = "lan5";
-						};
-						port@5 {
-							reg = <3>;
-							label = "lan6";
-						};
-						port@6 {
-							reg = <4>;
-							phy-mode = "rmii";
-							label = "cpu";
-							ethernet = <&macb1>;
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@7 {
-							reg = <5>;
-							phy-mode = "rmii";
-							label = "lan7";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-			
 			};
 
 			adc0: adc@f8018000 {
@@ -466,7 +316,7 @@
 				#address-cells = <1>;
 				#size-cells = <0>;
 				
-				status = "okay";
+				status = "disabled";
 				fixed-link {
 					speed = <100>;
 					full-duplex;
