--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -164,6 +164,47 @@
 				id = <0>;
 				status = "okay";
 
+				lan9370: lan9370@0 {
+					compatible = "microchip,lan9370";
+					reg = <0>;
+					spi-max-frequency = <44000000>;
+					spi-cpha;
+					spi-cpol;
+					interrupt-parent = <&pioB>;
+					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
+					status = "okay";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						port@0 {
+							reg = <0>;
+							label = "lan1";
+						};
+						port@1 {
+							reg = <1>;
+							label = "lan2";
+						};
+						port@2 {
+							reg = <2>;
+							label = "lan3";
+						};
+						port@3 {
+							reg = <3>;
+							label = "lan4";
+						};
+						port@4 {
+							reg = <4>;
+							phy-mode = "rmii";
+							label = "cpu";
+							ethernet = <&macb0>;
+							fixed-link {
+								speed = <100>;
+								full-duplex;
+							};
+						};
+					};
+				};
+
 				lan9374: lan9374@0 {
 					compatible = "microchip,lan9374";
 					reg = <0>;
