--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -180,28 +180,24 @@
 						port@0 {
 							reg = <0>;
 							label = "lan1";
+							phy-handle = <&t1phy0>
 						};
 						port@1 {
 							reg = <1>;
 							label = "lan2";
+							phy-handle = <&t1phy1>
 						};
 						port@2 {
-							reg = <7>;
-							label = "lan3";
-						};
-						port@3 {
 							reg = <2>;
 							label = "lan4";
+							phy-handle = <&t1phy2>
 						};
-						port@4 {
-							reg = <6>;
-							label = "lan5";
-						};
-						port@5 {
+						port@3 {
 							reg = <3>;
 							label = "lan6";
+							phy-handle = <&t1phy3>
 						};
-						port@6 {
+						port@4 {
 							reg = <4>;
 							phy-mode = "rgmii-tx";
 							label = "cpu";
@@ -211,7 +207,7 @@
 								full-duplex;
 							};
 						};
-						port@7 {
+						port@5 {
 							reg = <5>;
 							phy-mode = "rgmii-tx";
 							label = "lan7";
@@ -219,6 +215,41 @@
 								speed = <1000>;
 								full-duplex;
 							};
+						};
+						port@6 {
+							reg = <6>;
+							label = "lan5";
+							phy-handle = <&t1phy4>
+						};
+						port@7 {
+							reg = <7>;
+							label = "lan3";
+							phy-handle = <&t1phy5>
+						};
+					};
+					mdio {
+						compatible = "microchip,lan937x-mdio";
+						reg = <0x0>;
+						#address-cells = <1>;
+						#size-cells = <0>;
+						
+						t1phy0: ethernet-phy@0{
+							reg = <0x0>;
+						};
+						t1phy1: ethernet-phy@1{
+							reg = <0x1>;
+						};
+						t1phy2: ethernet-phy@2{
+							reg = <0x2>;
+						};
+						t1phy3: ethernet-phy@3{
+							reg = <0x3>;
+						};
+						t1phy4: ethernet-phy@4{
+							reg = <0x4>;
+						};
+						t1phy5: ethernet-phy@5{
+							reg = <0x5>;
 						};
 					};
 				};
