--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
@@ -178,19 +178,23 @@
 						#address-cells = <1>;
 						#size-cells = <0>;
 						port@0 {
-							reg = <0>;
+							reg = <0x0>;
+							phy-handle = <&t1phy0>;
 							label = "lan1";
 						};
 						port@1 {
-							reg = <1>;
+							reg = <0x1>;
+							phy-handle = <&t1phy1>;
 							label = "lan2";
 						};
 						port@2 {
-							reg = <2>;
+							reg = <0x2>;
+							phy-handle = <&t1phy2>;
 							label = "lan3";
 						};
 						port@3 {
-							reg = <3>;
+							reg = <0x3>;
+							phy-handle = <&t1phy3>;
 							label = "lan4";
 						};
 						port@4 {
@@ -202,6 +206,25 @@
 								speed = <100>;
 								full-duplex;
 							};
+						};
+					};
+					mdio {
+						compatible = "microchip,lan937x-mdio";
+						reg = <0x0>;
+						#address-cells = <1>;
+						#size-cells = <0>;
+						
+						t1phy0: ethernet-phy@0{
+							reg = <0x0>;
+						};
+						t1phy1: ethernet-phy@1{
+							reg = <0x1>;
+						};
+						t1phy2: ethernet-phy@2{
+							reg = <0x2>;
+						};
+						t1phy3: ethernet-phy@3{
+							reg = <0x3>;
 						};
 					};
 				};
@@ -471,6 +494,7 @@
 					speed = <100>;
 					full-duplex;
 				};
+
 			};
 
 			dbgu: serial@ffffee00 {
