--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -331,7 +331,7 @@
 					&pinctrl_adc0_ad8
 					&pinctrl_adc0_ad9
 					>;
-				status = "okay";
+				status = "disabled";
 			};
 
 			i2c2: i2c@f801c000 {
