--- a/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
+++ b/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
@@ -46,6 +46,7 @@ CONFIG_NET_DSA=y
 CONFIG_VLAN_8021Q=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_CBS=y
+CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_SCH_INGRESS=y
 CONFIG_NET_CLS_U32=m
