--- a/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
+++ b/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
@@ -40,22 +40,44 @@ CONFIG_IP_PNP_BOOTP=y
 CONFIG_IP_PNP_RARP=y
 # CONFIG_INET_DIAG is not set
 CONFIG_IPV6_SIT_6RD=y
+CONFIG_NETFILTER=y
+CONFIG_BRIDGE_NETFILTER=y
+CONFIG_BPFILTER=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=y
 CONFIG_VLAN_8021Q=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_CBS=y
+CONFIG_NET_SCH_ETF=m
 CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_SCH_SKBPRIO=y
 CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_CLS_U32=m
+CONFIG_NET_CLS_BASIC=y
+CONFIG_NET_CLS_TCINDEX=y
+CONFIG_NET_CLS_ROUTE4=y
+CONFIG_NET_CLS_FW=y
+CONFIG_NET_CLS_U32=y
+CONFIG_CLS_U32_PERF=y
+CONFIG_CLS_U32_MARK=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_NET_CLS_BPF=y
 CONFIG_NET_CLS_FLOWER=y
 CONFIG_NET_CLS_MATCHALL=y
 CONFIG_NET_CLS_ACT=y
-CONFIG_NET_ACT_GACT=m
+CONFIG_NET_ACT_POLICE=y
+CONFIG_NET_ACT_GACT=y
+CONFIG_GACT_PROB=y
 CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_ACT_PEDIT=y
+CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_NET_ACT_VLAN=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_NET_ACT_SKBMOD=y
+CONFIG_NET_ACT_GATE=y
+CONFIG_NET_TC_SKB_EXT=y
 CONFIG_CAN=y
 CONFIG_CAN_AT91=y
 CONFIG_CAN_M_CAN=y
