--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -14,6 +14,7 @@ BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3
 BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_ksz9897/busybox.config"
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_CBS=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_ETHTOOL=y
@@ -39,4 +40,3 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="linux4sam_5.3"
 BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam_5.3"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_ksz9897"
 BR2_PACKAGE_HOST_SAM_BA=y
-BR2_PACKAGE_CUSTOM_SCRIPTS=y
