--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -3,6 +3,8 @@ BR2_cortex_a5=y
 BR2_ARM_ENABLE_VFP=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
 BR2_DL_DIR="../dl"
+BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_LINARO_ARM=y
 BR2_ROOTFS_OVERLAY="board/atmel/sama5d3_xplained_ksz9897/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/atmel/sama5d3_xplained_ksz9897/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/atmel/sama5d3_xplained_ksz9897/post-image.sh"
@@ -21,6 +23,7 @@ BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_LINUXPTP=y
+BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_TARGET_ROOTFS_UBI=y
