--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -35,7 +35,8 @@ BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/linux4sam/u-boot-at91.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="linux4sam-2021.04"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_mmc"
+BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam-2021.04"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_lan937x_mmc"
 BR2_TARGET_UBOOT_ENVIMAGE=y
 BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="board/atmel/sama5d3_xplained_ksz9897/uboot-env.txt"
 BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x4000"
